Configurando a edição do crud

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
     <string name="app_name">SolRural</string>
-    <string name="ler_sobre_texto">A Sol Rural tem como objetivo aproveitar as superfícies dos terrenos utilizados pela agricultura familiar no Nordeste, onde essa prática é amplamente difundida, para a geração de energia solar.
-A energia gerada será utilizada pelos próprios produtores para alimentar tecnologias de irrigação inteligente, além de sistemas de captação e dessalinização de água.
+    <string name="ler_sobre_texto">A Sol Rural tem como objetivo aproveitar as superfícies dos terrenos utilizados pela agricultura familiar no Nordeste, onde essa prática é amplamente difundida, para a geração de energia solar.\n\n
+A energia gerada será utilizada pelos próprios produtores para alimentar tecnologias de irrigação inteligente, além de sistemas de captação e dessalinização de água.\n\n
  Ao integrar a produção agrícola com painéis solares, a Sol Rural não apenas otimiza o uso dos recursos naturais, mas também fornece energia limpa e acessível, fortalecendo a autonomia dos pequenos agricultores e promovendo a sustentabilidade e o desenvolvimento das comunidades rurais.
-Essa solução promove o crescimento econômico e a inclusão social no Nordeste, aproveitando o vasto potencial de energia solar da região para transformar desafios em oportunidades de desenvolvimento sustentável.
+
 </string>
+    <string name="beneficios">
+         Nossa solução promove o crescimento econômico e a inclusão social no Nordeste, aproveitando o vasto potencial de energia solar da região para transformar desafios em oportunidades de desenvolvimento sustentável.\n\n
+        Sistemas de irrigação movidos a energia solar permitem um uso eficiente da água, aumentando a produção em regiões de seca.\n\n
+    Além da venda de produtos agrícolas, os agricultores podem gerar renda extra vendendo o excedente de energia solar para a rede elétrica.\n\n
+    Redução da pegada de carbono e uso eficiente dos recursos naturais, contribuindo para a mitigação das mudanças climáticas.</string>
 </resources>
